# Nobla-SuperAgent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PRD.md  Plan.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  config.yaml  pyproject.toml
backend/nobla/: main.py
backend/nobla/agents/: __init__.py  base.py  bridge.py  cloning.py  communication.py  decomposer.py  executor.py  mcp_client.py  mcp_server.py  models.py  orchestrator.py  registry.py  workspace.py
backend/nobla/automation/: __init__.py  confirmation.py  interpreter.py  models.py  parser.py  scheduler.py  service.py
backend/nobla/brain/: __init__.py  base_provider.py  (+7 more)
backend/tests/: _slack_grid_helpers.py  test_academic.py  test_agents.py  test_agents_advanced.py  test_agents_phase6v2.py  test_audit.py  test_auth.py  test_auth_api_key.py  test_auth_local.py  test_auth_oauth.py  test_brave.py  test_channel_webhook_dispatcher.py  test_channel_webhook_per_adapter.py  test_channels.py  test_chat_flow.py  test_circuit_breaker.py  test_code_codegen.py  test_code_debug.py  test_code_git.py  test_code_packages.py  test_code_runner.py  test_code_settings.py  test_compression.py  test_config.py  test_consolidation.py  test_conversation_rpc.py  test_costs.py  test_discord_adapter.py  test_emotion.py  test_episodic.py  test_event_bus.py  test_extraction.py  test_graph.py  test_killswitch.py  test_learning_ab.py  test_learning_feedback.py  test_learning_generator.py  test_learning_handlers.py  test_learning_models.py  test_learning_patterns.py  (+76 more)
(+500 files in other folders)
