[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nobla*"]

[project]
name = "nobla-agent"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.3.0",
    "groq>=0.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.1.0",
    "docker>=7.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "tiktoken>=0.7.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "opuslib>=3.0.1",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
